--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,3 +1,30 @@
+@import url("https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css");
+
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+body {
+background-color: #cfcfcf;
+}
+
+nav {
+  box-shadow: 0 20px 35px rgba(0, 0, 0, 0.1);
+}
+
+.logo {
+  transition: all 0.5s ease;
+  margin: 10px 0 0 10px;
+}
+
+.logo span {
+  font-weight: bold;
+  padding-left: 15px;
+  font-size: 18px;
+  text-transform: uppercase;
+}
+
+nav {
+  width: 280px;
+  transition: all 0.5s ease;
+}
